<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F44336"
    tools:context=".fragment.LoginFirstFragment">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/txt_title"
        android:textSize="@android:dimen/app_icon_size"
        android:textColor="@color/white"
        android:textStyle="italic"
        android:fontFamily="cursive"/>

    <LinearLayout
        android:id="@+id/pnl_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_title"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="13dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="13dp"
            android:text="@string/txt_email"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="13dp"
            android:autofillHints=""
            android:drawableStart="@drawable/ic_email"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/pnl_pass_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pnl_email"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="13dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txt_pass_word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="13dp"
            android:drawableStart="@drawable/ic_lock"
            android:drawableEnd="@drawable/ic_visibility_off"
            android:textColor="@color/white"
            android:inputType="textPassword"
            android:hint="@string/pass_word"
            android:autofillHints=""/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pnl_pass_word"
        android:layout_marginStart="30dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/btn_login_background"
        android:text="@string/btn_login"
        android:textColor="@color/white"
        android:layout_marginTop="60dp"/>

    <TextView
        android:id="@+id/txt_nof"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_nof"
        android:layout_below="@id/btn_login"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"/>

</RelativeLayout>